--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Problem Bank Website</title>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Source+Serif+4:ital,opsz,wght@0,8..60,200..900;1,8..60,200..900&display=swap');
+        </style>
 </head>
 <body>
     <script src="javascript.js"></script>
-    <div class="title">Problem Bank Website</div>
+    <div class="Source Serif 4">Problem Bank Website</div>
 </body>
 </html>
