--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 </head>
 <body>
     <script src="javascript.js"></script>
-    <div class="Source Serif 4">Problem Bank Website</div>
+    <div class="Title">Problem Bank Website</div>
 </body>
 </html>
