--- a/index.html
+++ b/index.html
@@ -3,11 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Problem Bank Website</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
-    <script src="javascript.js"></script>
-    <div class="title">Problem Bank Website</div>
-</body>
+    <body>
+        <div class="title">Problem Bank Website</div>
+    </body>
+
+    <form class = "text" method="GET">
+        <input id="userInput" type="text" placeholder="Enter Text">
+        <button onclick="returnText()">Submit</button>
+        <script src="javascript.js"></script>
+    </form>
+
 </html>
