--- a/index.html
+++ b/index.html
@@ -7,13 +7,18 @@
     <link rel="stylesheet" href="styles.css">
 </head>
     <body>
-        <div class="title">Problem Bank Website</div>
+        <h1>Problem Bank Website</h1>
+        <br>
+        <form class="input" method="GET">
+            <button type="spacer"></button>
+            <input type="text" id="userInput" placeholder="Enter Problem">
+            <button type="submit" onclick="returnText()">Submit</button>
+            <script src="javascript.js"></script>
+        </form>
+        <br>
+        <p>Welcome to the Lab's "Problem Bank Website". This website is dedicated to taking problems from the community and solving them with our resources here at the lab. Just enter a problem you have above, so our Team STEM Members can come up with an innovative solution for it!</p>
+
     </body>
 
-    <form class = "text" method="GET">
-        <input id="userInput" type="text" placeholder="Enter Text">
-        <button onclick="returnText()">Submit</button>
-        <script src="javascript.js"></script>
-    </form>
 
 </html>
