--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <form class="input" method="GET">
             <button type="spacer"></button>
             <input type="text" id="userInput" placeholder="Enter Problem">
+            <button type="spacer"></button>
             <button type="submit" onclick="returnText()">Submit</button>
             <script src="javascript.js"></script>
         </form>
