--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="styles.css">
 </head>
     <body>
+        <!--Title-->
         <h1>Problem Bank Website</h1>
+
+        <!--Input Problem-->
         <br>
         <form class="input" method="GET">
             <button type="spacer"></button>
@@ -16,6 +19,8 @@
             <button type="submit" onclick="returnText()">Submit</button>
             <script src="javascript.js"></script>
         </form>
+
+        <!--Paragraph-->
         <br>
         <p>Welcome to the Lab's "Problem Bank Website". This website is dedicated to taking problems from the community and solving them with our resources here at the lab. Just enter a problem you have above, so our Team STEM Members can come up with an innovative solution for it!</p>
 
