--- a/index.html
+++ b/index.html
@@ -8,21 +8,19 @@
 </head>
     <body>
         <!--Title-->
-        <h1>Problem Bank Website</h1>
+        <h1>PDL Problem Bank</h1>
+
+        <!--Paragraph-->
+        <p>Welcome to the Lab's "Problem Bank Website". This website is dedicated to taking problems from the community and solving them with our resources here at the lab. Just enter a problem you have below, so our Team STEM Members can come up with an innovative solution for it!</p>
 
         <!--Input Problem-->
-        <br>
         <form class="input" method="GET">
-            <button type="spacer"></button>
-            <input type="text" id="userInput" placeholder="Enter Problem">
-            <button type="spacer"></button>
+            <textarea type="text" id="userInput" placeholder="Enter Problem" wrap="soft"> </textarea>
+            <!--<input type="text" id="userInput" placeholder="Enter Problem">-->
+            <br>
             <button type="submit" onclick="returnText()">Submit</button>
             <script src="javascript.js"></script>
         </form>
-
-        <!--Paragraph-->
-        <br>
-        <p>Welcome to the Lab's "Problem Bank Website". This website is dedicated to taking problems from the community and solving them with our resources here at the lab. Just enter a problem you have above, so our Team STEM Members can come up with an innovative solution for it!</p>
 
     </body>
 
