--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Problem Bank Website</title>
         <link rel="stylesheet" href="styles.css">
     </head>
-    
+
     <body>
         <!--Script-->
         <script src="javascript.js"></script>
@@ -18,10 +18,17 @@
         <p>Welcome to the Lab's "Problem Bank Website". This website is dedicated to taking problems from the community and solving them with our resources here at the lab. Just enter a problem you have below, so our Team STEM Members can come up with an innovative solution for it!</p>
 
         <!--Input Problem-->
-        <p type="question">Enter Problem Below:</p>
+        <p type="question">Enter your problem below:</p>
         <form class="input" method="GET">
             <textarea type="text" wrap="soft" maxlength="500" id="userInput" oninput="countCharacters()"> </textarea>
             <div id="charCount">0 / 500</div>
+            <br>
+        </form>
+
+        <!--Input Email-->
+        <p type="question">Enter your email below:</p>
+        <form class="input" method="GET">
+            <input type="text" id="userInput"></input>
             <br>
         </form>
 
