--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
         <!--Paragraph-->
         <p>Welcome to the Lab's "Problem Bank Website". This website is dedicated to taking problems from the community and solving them with our resources here at the lab. Just enter a problem you have below, so our Team STEM Members can come up with an innovative solution for it!</p>
 
+        <!--
+        <p>Criteria:</p>
+        <div>
+            <li>test</li>
+        </div>
+        -->
+        
         <!--Input Problem-->
         <p type="question">Enter your problem below:</p>
         <form class="input" method="GET">
