--- a/index.html
+++ b/index.html
@@ -14,15 +14,14 @@
         <!--Title-->
         <h1>PDL Problem Bank</h1>
 
+        <form method="POST" action="https://script.google.com/macros/s/AKfycbzs1TLkKeibBDupjLRtgd7kUPqCXcWK9DowWiShGCziFTdlDoeCKGcv3fakW1ZSmJNO/exec">
+            <input name="Email" type="text" placeholder="Email" required>
+            <input name="Name" type="text" placeholder="Name" required>
+            <button type="submit">Submit</button>
+        </form>
+          
         <!--Paragraph-->
         <p>Welcome to the Lab's "Problem Bank Website". This website is dedicated to taking problems from the community and solving them with our resources here at the lab. Just enter a problem you have below, so our Team STEM Members can come up with an innovative solution for it!</p>
-
-        <!--
-        <p>Criteria:</p>
-        <div>
-            <li>test</li>
-        </div>
-        -->
         
         <!--Input Problem-->
         <p type="question">Enter your problem below:</p>
