--- a/index.html
+++ b/index.html
@@ -29,19 +29,11 @@
 
             <!--Input Problem-->
             <p type="question">Enter your problem below:</p>
-            <input name="Problem" type="text" placeholder="Problem" required>
+            <textarea name="Problem" type="text" placeholder="Problem" wrap="soft" maxlength="1000" id="userInput" oninput="countCharacters()" required></textarea>
+            <div id="charCount">0 / 1000</div>
 
             <!--Submit Button-->
             <button type="submit">Submit</button>
         </form>
-          
-        <!--
-        <p type="question">Enter your problem below:</p>
-        <form class="input" method="GET" required>
-            <textarea type="text" wrap="soft" maxlength="500" id="userInput" oninput="countCharacters()"> </textarea>
-            <div id="charCount">0 / 500</div>
-            <br>
-        </form>
-        -->
     </body>
 </html>
