--- a/index.html
+++ b/index.html
@@ -12,12 +12,26 @@
         <script src="javascript.js"></script>
 
         <!--Title-->
-        <h1>PDL Problem Bank</h1>
+        <h1>
+            PDL Problem Bank 
+            <a href="designs.html" target="_blank"><button type="header">Solutions</button></a>
+            <a href="https://docs.google.com/spreadsheets/d/1ReZLz_QFtAVS5kzsLNfMN1X0hOvhP4l2G3KiVYD-9rU/edit?gid=0#gid=0" target="_blank"><button type="header">Submissions</button></a>
+        </h1>
 
         <!--Paragraph-->
         <p>Welcome to the Lab's "Problem Bank Website". This website is dedicated to taking problems from the community and solving them with our resources here at the lab. Just enter a problem you have below, so our Team STEM Members can come up with an innovative solution for it!</p>
 
-        <form method="POST" action="https://script.google.com/macros/s/AKfycbzs1TLkKeibBDupjLRtgd7kUPqCXcWK9DowWiShGCziFTdlDoeCKGcv3fakW1ZSmJNO/exec">
+        <!--Criteria-->
+        <p style="font-weight: bold;">
+            Criteria
+        </p>
+        <li>1.</li>
+        <li>2.</li>
+        <li>3.</li>
+        <li>4.</li>
+        <li>5.</li>
+
+        <form method="POST" action="https://script.google.com/macros/s/AKfycbx3PJaMgpzRfHwVDkJMkpI8EO8M-bGCZBmg3xQOTUeAV_2G--84uKT8hpExB5Yb2zw5/exec">
             
             <!--Input Email-->
             <p type="question">Enter your email below:</p>
