--- a/index.html
+++ b/index.html
@@ -1,77 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Problem Bank Website</title>
-        <link rel="stylesheet" href="styles.css">
-    </head>
-    <body>
-        <!-- Script -->
-        <script src="javascript.js"></script>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Problem Bank Website</title>
+    <link rel="stylesheet" href="styles.css">
+    <script src="javascript.js"></script>
+</head>
 
-        <!-- Title -->
-        <h1 style="padding-top: 10px;">
-            PDL Problem Bank
-        </h1>
-        <h1 style="padding-bottom: 10px;">
-            <a href="designs.html" target="_blank">
-                <button type="header">Solutions</button>
-            </a>
-            <a href="https://docs.google.com/spreadsheets/d/1ReZLz_QFtAVS5kzsLNfMN1X0hOvhP4l2G3KiVYD-9rU/edit?gid=0#gid=0" target="_blank">
-                <button type="header">Submissions</button>
-            </a>
-            <a href="https://dawsonproblembank.wixsite.com/website" target="_blank">
-                <button type="header">Dawson Problem Bank</button>
-            </a>
-        </h1>
+<body>
 
-        <!-- Introduction -->
-        <p style="margin-bottom: 10px;">
-            Welcome to the Lab's "Problem Bank Website"!
-            This website is dedicated to taking problems from the community and solving them with our resources here at the lab. 
-            Just enter a problem you have below, so our Team STEM Members can come up with an innovative solution for it! 
-            This idea has been heavily inspired by "The Dawson Problem Bank".
-            If you want to learn more, click the button at the top of the page titled "Dawson Problem Bank".
-        </p>
+    <!-- Title -->
+    <h1 style="padding-top: 10px;">
+        PDL Problem Bank
+    </h1>
+    <h1 style="padding-bottom: 10px;">
+        <a href="designs.html" target="_blank">
+            <button type="header">Solutions</button>
+        </a>
+        <a href="https://docs.google.com/spreadsheets/d/1ReZLz_QFtAVS5kzsLNfMN1X0hOvhP4l2G3KiVYD-9rU/edit?gid=0#gid=0" target="_blank">
+            <button type="header">Submissions</button>
+        </a>
+        <a href="https://dawsonproblembank.wixsite.com/website" target="_blank">
+            <button type="header">Dawson Problem Bank</button>
+        </a>
+    </h1>
 
-        <!-- Criteria -->
-        <p style="text-align: center; font-size: 24px; margin-bottom: -12px;">
-            <b>What is a good problem to submit?</b>
-        </p>
-        <p style="margin-bottom: 4px;">
-            A good problem for our Problem Bank follows the following criteria: authenticity, urgency, size, simplicity, and impact. 
-            While an ideal problem would accurately depict this criteria, please do not feel discouraged about submitting a problem that does not. 
-            Any problem you have can be submitted, but if it follows this criteria, there is a higher chance of it being solved! 
-        </p>
-        <ul>
-            <li><b>Authenticity: </b><br>&emsp;The problem is authentic, and the materials at the lab are needed to solve it.</li>
-            <li><b>Urgency: </b><br>&emsp;There is ample time to solve the problem. Our team members need time to think of solutions and respond.</li>
-            <li><b>Size: </b><br>&emsp;The solution is small. We have limited resources at the lab, so the problem should not require a lot.</li>
-            <li><b>Simplicity: </b><br>&emsp;The problem is solvable! This may seem obvious, but the problem should be relatively simple.</li>
-            <li><b>Impact: </b><br>&emsp;The problem is important! A good problem is a problem that is shared with many people.</li>
-        </ul>
+    <!-- Introduction -->
+    <p style="margin-bottom: 10px;">
+        Welcome to the Lab's "Problem Bank Website"!
+        This website is dedicated to taking problems from the community and solving them with our resources here at the lab. 
+        Just enter a problem you have below, so our Team STEM Members can come up with an innovative solution for it! 
+        This idea has been heavily inspired by "The Dawson Problem Bank".
+        If you want to learn more, click the button at the top of the page titled "Dawson Problem Bank".
+    </p>
 
-        <!-- Submission -->
-        <p style="text-align: center; font-size: 24px; margin-bottom: -20px; margin-top: 20px;">
-            <b>Submission:</b>
-        </p>
-        <form method="POST" action="https://script.google.com/macros/s/AKfycbx3PJaMgpzRfHwVDkJMkpI8EO8M-bGCZBmg3xQOTUeAV_2G--84uKT8hpExB5Yb2zw5/exec">
-            <!-- Input Email -->
-            <p type="question">Enter your email below:</p>
-            <input name="Email" type="text" placeholder="Email" required>
+    <!-- Criteria -->
+    <p style="text-align: center; font-size: 24px; margin-bottom: -12px;">
+        <b>What is a good problem to submit?</b>
+    </p>
+    <p style="margin-bottom: 4px;">
+        A good problem for our Problem Bank follows the following criteria: authenticity, urgency, size, simplicity, and impact. 
+        While an ideal problem would accurately depict this criteria, please do not feel discouraged about submitting a problem that does not. 
+        Any problem you have can be submitted, but if it follows this criteria, there is a higher chance of it being solved! 
+    </p>
+    <ul>
+        <li><b>Authenticity: </b><br>&emsp;The problem is authentic, and the materials at the lab are needed to solve it.</li>
+        <li><b>Urgency: </b><br>&emsp;There is ample time to solve the problem. Our team members need time to think of solutions and respond.</li>
+        <li><b>Size: </b><br>&emsp;The solution is small. We have limited resources at the lab, so the problem should not require a lot.</li>
+        <li><b>Simplicity: </b><br>&emsp;The problem is solvable! This may seem obvious, but the problem should be relatively simple.</li>
+        <li><b>Impact: </b><br>&emsp;The problem is important! A good problem is a problem that is shared with many people.</li>
+    </ul>
 
-            <!-- Input Name -->
-            <p type="question">Enter your name below:</p>
-            <input name="Name" type="text" placeholder="Name" required>
+    <!-- Submission -->
+    <p style="text-align: center; font-size: 24px; margin-bottom: -20px; margin-top: 20px;">
+        <b>Submission:</b>
+    </p>
+    <form onsubmit="handleSubmit(event)">
+        <!-- Input Email -->
+        <p type="question">Enter your email below:</p>
+        <input name="Email" type="text" placeholder="Email" required>
 
-            <!-- Input Problem -->
-            <p type="question">Enter your problem below:</p>
-            <textarea name="Problem" type="text" placeholder="Problem" wrap="soft" maxlength="1000" id="userInput" oninput="countCharacters()" required></textarea>
-            <div id="charCount">0 / 1000</div>
+        <!-- Input Name -->
+        <p type="question">Enter your name below:</p>
+        <input name="Name" type="text" placeholder="Name" required>
 
-            <!-- Submit Button -->
-            <button type="submit">Submit</button>
-        </form>
-    </body>
+        <!-- Input Problem -->
+        <p type="question">Enter your problem below:</p>
+        <textarea name="Problem" type="text" placeholder="Problem" wrap="soft" maxlength="1000" id="userInput" oninput="countCharacters()" required></textarea>
+        <div id="charCount">0 / 1000</div>
+
+        <!-- Submit Button -->
+        <button type="submit">Submit</button>
+    </form>
+</body>
 </html>
