added a solutions page

--- a/designs.html
+++ b/designs.html
@@ -4,8 +4,55 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Page showing example solutions to problems</h1>
+    <h1 style="padding-top: 10px;">
+        Teen STEM Solutions
+    </h1>
+    <h1 style="padding-bottom: 10px;">
+        <a href="index.html" target="_blank">
+            <button type="header">Home</button>
+        </a>
+        <a href="https://docs.google.com/spreadsheets/d/1ReZLz_QFtAVS5kzsLNfMN1X0hOvhP4l2G3KiVYD-9rU/edit?gid=0#gid=0" target="_blank">
+            <button type="header">Submissions</button>
+        </a>
+    </h1>
+
+    <p style="margin-bottom: 10px;">
+        Welcome to the Teen STEM Solutions page. This page is dedicated to show some examples of problems solved here at the lab. 
+        When people submit problems to our problem bank, our Teen's at the Plymouth District Library lab spend some time planning 
+        an innovative solution. You can take a look at some of our Teen's solutions on this page. To submit a problem, click the "home" button on the top. 
+        To check out the Google sheet full of problem submissions, click the "submissions" button on the top.
+    </p>
+
+    <section style="background-color: rgb(245, 245, 239); margin-top: 30px; margin-bottom: 30px;">
+        <p style="text-align: center; font-size: 24px; margin-bottom: -12px; background-color: rgb(251, 242, 223);">
+            <b>Letter Box:</b>
+        </p>
+        <div class="container">
+            <p style="margin-left: 10px; margin-right: 10px;">
+                <b>Problem:</b><br>
+                "We could use a box with sections for the sandwich board <br>
+                letters. Right now each letter is rubber-banded and the <br>
+                bands keep drying out and breaking. A sectioned box like <br>
+                the seed box would be a nice way to keep the letters and <br>
+                numbers sorted. This would make it WAY easier to grab the <br>
+                letters as you aremaking a message and easier to sort <br>
+                them back once you are taking the message off the board." <br>
+            </p>
+            <p style="margin-left: 10px; margin-right: 10px;">
+                <b>Solution:</b><br>
+                Our solution was to create a wooden box to hold the letters<br>
+                The box has individual containers for each type of letter,<br>
+                and they are easy to access. This was created using the<br>
+                Glowforge laser cutting machine at the lab. the Glowforge<br>
+                is free to use here at the Plymouth District Library.<br>
+            </p>
+            <img src="photos/letterboxfront.jpeg" style="width: 400px; padding-right: 10px; padding-left: 10px;">
+            <img src="photos/letterboxside.jpeg" style="width: 400px; padding-right: 10px; padding-left: 10px;">
+        </div>
+    </section>
+
 </body>
 </html>
