removed target="_blank"

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         PDL Problem Bank
     </h1>
     <h1 style="padding-bottom: 10px;">
-        <a href="designs.html" target="_blank">
+        <a href="designs.html">
             <button type="header">Solutions</button>
         </a>
         <a href="https://docs.google.com/spreadsheets/d/1ReZLz_QFtAVS5kzsLNfMN1X0hOvhP4l2G3KiVYD-9rU/edit?gid=0#gid=0" target="_blank">
