--- a/designs.html
+++ b/designs.html
@@ -11,7 +11,7 @@
         Teen STEM Solutions
     </h1>
     <h1 style="padding-bottom: 10px;">
-        <a href="index.html" target="_blank">
+        <a href="index.html">
             <button type="header">Home</button>
         </a>
         <a href="https://docs.google.com/spreadsheets/d/1ReZLz_QFtAVS5kzsLNfMN1X0hOvhP4l2G3KiVYD-9rU/edit?gid=0#gid=0" target="_blank">
